hectabitstyles.css
/* Reset some default styles */
body, h1, p, ul, li, li2, p1 {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

/* Dark mode stylse */

body.dark-mode {
    color: #fff;
    background-color: rgb(34, 34, 34);
    --button-color: rgb(27, 105, 125);
    --sidebar-color: rgb(14, 66, 79);
}

a {
    font-size: 20px;
}

.clickbutton {
    padding: 10px;
    background-color: var(--button-color);
    font-size: 15px;
    border-radius: 10px;
    color: white;
    min-width: 50px;
    max-width: 100px;
    display: inline-block;
    text-decoration: none;
    transition: all 0.3s ease;
}

.clickbutton:hover {
    background-color: rgb(40, 150, 179);
    text-decoration: underline;
}

.spacer {
  height: 10px;
}

body {
    font-family: Arial, sans-serif;
    color: rgb(40, 40, 40);
    --button-color: rgb(118, 181, 197);
    --sidebar-color: rgb(0, 160, 198);
}

/* Sidebar styles */
.sidebar {
    border-radius: 10px;
    transition: all 0.3s ease;
    background-color: var(--sidebar-color);
    color: white;
    padding: 20px;
    width: 250px;
    position: fixed;
    top: 5px;
    left: 5px;
    bottom: 5px;
    overflow-y: auto;
    box-shadow: lightgrey 5px 5px 5px;
}

.closebar {
    left: 2px;
    top: 15px;
    background-color: #0000;
    overflow-y: hidden;
    position: fixed;
    transition: all 0.3s ease 0s;
    color: rgb(118, 181, 197);
    width: 318px;
    height: 100%;
    display: flex;
    flex-direction: column;
    padding-right: 8px;
    z-index: 2;
}

h1 {
    font-size: 24px;
    text-align: center;
}

.sidebar h1 {
    font-size: 24px;
    text-align: center;
}

p {
    font-size: 14px;
    margin-top: 10px;
    text-align: center;
}

p1 {
    font-size: 20px;
    text-align: center;
}

.sidebar ul {
    list-style-type: none;
    margin-top: 20px;
    text-align: center;
}

.sidebar li {
    margin-bottom: 10px;
}

.sidebar a {
    color: white;
    text-decoration: none;
    font-weight: bold;
    font-size: 16px;
    display: block;
    border-radius: 5px;
    padding: 7px 16px;
    text-align: center;
    background-color: var(--button-color);
    transition: all 0.3s ease;
    margin: 2px;
}

.sidebar a:hover {
    background-color: rgb(40, 150, 179);
}

button {
    border-radius: 5px;
    border: none;
    margin-top: 5px;
    padding: 10px;
    color: rgb(255, 255, 255);
    background: var(--button-color);
    min-width: 28px;
    transition: all 0.3s ease;
    margin-left: auto;
    box-shadow: lightgrey 5px 5px 5px;
}

button:hover {
    background-color: rgb(40, 150, 179);
}

button:hover {
    text-decoration: underline;
}

.sidebar a:hover {
    text-decoration: underline;
}

/* Content styles (adjust as needed) */
.content {
    padding: 20px;
    margin-left: 300px;
    transition: all 0.3s ease;
    text-align: center;
}

/* Add CSS styles for hiding and sliding the sidebar */

.content.expanded {
    margin-left: 0;
}

.closebar.expanded {
    transform: translateX(-295px);
}

.sidebar.hidden {
    transform: translateX(-295px);
}

.content.expanded + .sidebar.hidden {
    transform: translateX(0);
}

img {
    height: 250px;
    margin-bottom: 30px;
}

.darkmodeicon {
    height: 8px;
    margin-bottom: 1px;
    scale: 2.7;
}

